2018-06-15 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCClospre.hpp,
	  support/regression/tests/bug-2761.c:
	  Fix bug #2761.

2018-06-13 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCglobl.h,
	  src/SDCCBBlock.c:
	  Infrastructure for custom iCode dump point.
	* src/SDCClospre.hpp:
	  Fix handling of use vector in lospre.
	* src/SDCClrange.h,
	  src/SDCClrange.c,
	  src/SDCCopt.c:
	  Fix secondary issue in bug #2756.
	* device/include/uchar.h,
	  device/lib/incl.mk,
	  device/lib/mbstoc16s.c,
	  device/lib/c16stombs.c,
	  support/regression/tests/new_wide.c
	  Functions for converting between UTF-8 and UTF-16 strings.

2018-06-13 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCcse.c: fix bugs #2709 and #1951
	* support/regression/tests/gcc-torture-execute-20001027-1.c,
	* support/regression/tests/bug-2708.c: enable tests

2018-06-13 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/bug-2756.c:
	  disabled for test-mcs51-large and test-mcs51-huge due to build failure.

2018-06-13 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCset.c: reduce memory use of unionSets()

2018-06-12 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/bug-2756.c:
	  disabled for test-host.

2018-06-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  support/regression/tests/bug-2756.c:
	  Fix main issue in bug #2756.

2018-06-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/ralloc.c: fix bug #2737

2018-06-11 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCbitv.c: fix bug #2759
	* src/SDCCglue.c: fix bug #2749
	* support/regression/tests/bug-2749: enable test

2018-06-11 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/literalop.c:
	  Improved for aarch64.

2018-06-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCbitv.c,